--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="black_is_beautiful">Back</string>
     <string name="beauty">Beauty</string>
     <string name="click">Click</string>
+    <string name="naturally_curly">Naturally Curly</string>
 </resources>
