update to second activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="beauty">Beauty</string>
     <string name="click">Click</string>
     <string name="naturally_curly">Naturally Curly</string>
+    <string name="naturallycurly_com">NATURALLYCURLY.COM</string>
 </resources>
