deleted unused RV

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Notification List</string>
+    <string name="app_name">FROLISTICView</string>
     <string name="firstfro">firstfro</string>
     <string name="secondfro">secondfro</string>
     <string name="thirdfro">thirdfro</string>
